--- a/src/scss/common/typo.scss
+++ b/src/scss/common/typo.scss
@@ -49,4 +49,11 @@
 .txt16 {
   font-size: 1.6rem;
   line-height: 130%;
+
+  @media (max-width: 48em) {
+    font-family: 'Roboto';
+    font-size: 2.8rem;
+    line-height: 3.2rem;
+    color: rgba(255, 255, 255, 0.4);
+  }
 }
