--- a/src/scss/sections/portfolio.scss
+++ b/src/scss/sections/portfolio.scss
@@ -303,6 +303,191 @@
   }
 }
 
+.portfolio-in {
+  padding: 20rem 0;
+
+  background-color: $gray;
+
+  @media (max-width: 48em) {
+    padding: 22rem 0;
+  }
+
+  // .portfolio-in__container
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  // .portfolio-in__title
+
+  &__title {
+    margin-bottom: 7rem;
+
+    color: $white;
+
+    @media (max-width: 48em) {
+      margin-bottom: 6.4rem;
+    }
+  }
+
+  &__filters-btn {
+    padding: 2.8rem 4rem;
+    margin-bottom: 6.4rem;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 2px solid $white;
+
+    font-family: 'Roboto';
+    font-weight: 600;
+    font-size: 3.2rem;
+    line-height: 4rem;
+    color: $white;
+
+    &::after {
+      content: '';
+
+      flex: 0 0 4.8rem;
+      width: 4.8rem;
+      height: 4.8rem;
+
+      background: url(@img/icons/filters.svg) center / contain no-repeat;
+    }
+
+    @media (min-width: 48em) {
+      display: none;
+    }
+  }
+
+  // .portfolio-in__filters
+
+  &__filters {
+    display: grid;
+    gap: 6.4rem;
+
+    @media (min-width: 48em) {
+      margin-bottom: 5rem;
+
+      grid-template-columns: repeat(3, 1fr);
+      gap: 4rem;
+    }
+  }
+
+  // .portfolio-in__group
+
+  &__group {
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.8rem;
+
+    @media (max-width: 48em) {
+      row-gap: 1.6rem;
+    }
+  }
+
+  // .portfolio-in__label
+
+  &__label {
+    color: $white;
+    line-height: 130%;
+  }
+
+  // .portfolio-in__select
+
+  &__select {
+  }
+
+  // .portfolio-in__range-slide
+
+  &__range-slide {
+    padding-left: 3.5rem;
+    margin-top: 5rem;
+
+    @media (min-width: 48em) {
+      margin-top: 1.5rem;
+      padding-left: 1rem;
+    }
+  }
+
+  // .portfolio-in__items
+
+  &__items {
+    display: grid;
+    gap: 4.8rem;
+
+    @media (min-width: 48em) {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 4rem;
+    }
+  }
+}
+
+.filters-portfolio-in {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  overflow: auto;
+
+  color: $white;
+
+  background-color: $gray;
+
+  transform: translateX(110%);
+
+  transition: transform 0.3s ease;
+
+  ._show-filters & {
+    transform: none;
+  }
+
+  // .filters-portfolio-in__container
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+
+    &.container {
+      padding-top: 3.2rem;
+      padding-bottom: 3.2rem;
+    }
+  }
+
+  // .filters-portfolio-in__btn
+
+  &__btn {
+    padding: 2.8rem 0;
+    margin-bottom: 6.4rem;
+
+    display: flex;
+    align-items: center;
+    column-gap: 6.4rem;
+
+    font-family: 'Montserrat';
+    font-weight: 500;
+    font-size: 4.4rem;
+    line-height: 5.4rem;
+
+    &::before {
+      content: '';
+
+      flex: 0 0 5.6rem;
+      width: 5.6rem;
+      height: 5.6rem;
+
+      background: url(@img/icons/arr.svg) center / contain no-repeat;
+
+      transform: rotate(-180deg);
+    }
+  }
+}
+
 @keyframes rect4 {
   0% {
     transform: translate(0, 0);
