--- a/src/scss/sections/services.scss
+++ b/src/scss/sections/services.scss
@@ -229,6 +229,154 @@
   }
 }
 
+.services-in {
+  padding: 20rem 0;
+
+  background-color: $gray;
+
+  @media (max-width: 48em) {
+    padding: 22rem 0;
+  }
+
+  // .services-in__container
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  // .services-in__title
+
+  &__title {
+    margin-bottom: 3rem;
+
+    color: $white;
+
+    @media (max-width: 48em) {
+      margin-bottom: 1.4rem;
+    }
+  }
+
+  // .services-in__items
+
+  &__items {
+    display: flex;
+    flex-direction: column;
+  }
+
+  // .services-in__item
+
+  &__item {
+  }
+
+  // .services-in__btn
+
+  &__btn {
+  }
+}
+
+.item-services {
+  position: relative;
+
+  padding: 4rem 0;
+
+  @media (max-width: 48em) {
+    padding: 4.8rem 0;
+  }
+
+  &::after {
+    content: '';
+
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+
+    width: 100vw;
+    height: 2px;
+
+    background-color: rgba(255, 255, 255, 0.2);
+
+    transform: translateX(-50%);
+  }
+
+  // .item-services__inner
+
+  &__inner {
+    display: grid;
+
+    @media (min-width: 48em) {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, auto);
+      column-gap: 4rem;
+    }
+  }
+
+  // .item-services__image-wrap
+
+  &__image-wrap {
+    margin-bottom: 4.8rem;
+
+    width: 100%;
+    height: 44.4rem;
+
+    @media (min-width: 48em) {
+      margin-bottom: 0;
+
+      grid-row: span 2;
+      height: 100%;
+      min-height: 31rem;
+    }
+  }
+
+  // .item-services__image
+
+  &__image {
+    height: 100%;
+
+    object-fit: cover;
+  }
+
+  // .item-services__subtitle
+
+  &__subtitle {
+    color: $white;
+
+    @media (max-width: 48em) {
+      margin-bottom: 3.2rem;
+
+      font-size: 5.2rem;
+    }
+  }
+
+  // .item-services__text
+
+  &__text {
+    margin-bottom: 4.8rem;
+
+    color: rgba(255, 255, 255, 0.4);
+
+    &.txt20 {
+      line-height: 137%;
+    }
+
+    @media (min-width: 48em) {
+      margin-bottom: 0;
+
+      grid-row: span 2;
+
+      line-height: 140%;
+    }
+  }
+
+  &__btn {
+    margin-right: auto;
+
+    @media (min-width: 48em) {
+      margin-top: auto;
+    }
+  }
+}
+
 @keyframes rect10 {
   0% {
     transform: translate(0, 0);
