--- a/src/scss/base/set.scss
+++ b/src/scss/base/set.scss
@@ -8,7 +8,7 @@ html {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: 'Inter';
+  font-family: 'Roboto';
   font-size: 0.5208335vw;
   font-style: normal;
   font-weight: normal;
