--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -87,3 +87,7 @@ main {
 @import 'sections/reviews';
 @import 'sections/request';
 @import 'sections/special';
+@import 'sections/rent-hero';
+@import 'sections/photozones';
+@import 'sections/entertaiment';
+@import 'sections/portfolio-chapter';
