--- a/src/scss/sections/special.scss
+++ b/src/scss/sections/special.scss
@@ -1,24 +1,25 @@
 .special {
   position: relative;
 
-  margin-bottom: 20rem;
   padding: 20rem 0;
-
-  &::after {
-    content: '';
-
-    position: absolute;
-    bottom: -20rem;
-    left: 0;
-
-    width: 100%;
-    height: 20rem;
-
-    background-color: $gray;
-  }
 
   @media (max-width: 48em) {
     padding: 22rem 0;
+
+    &::before {
+      content: '';
+
+      position: absolute;
+      top: 44.5%;
+      left: -8rem;
+
+      width: 32rem;
+      height: 32rem;
+
+      border: 2px solid #cfcfcf;
+
+      transform: translateY(-50%) rotate(45deg);
+    }
   }
 
   // .special__container
