--- a/src/scss/sections/about.scss
+++ b/src/scss/sections/about.scss
@@ -222,6 +222,118 @@
   }
 }
 
+.about-hero {
+  position: relative;
+
+  // .about-hero__container
+
+  &__container {
+    position: relative;
+    z-index: 2;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100rem;
+
+    @media (max-width: 48em) {
+      min-height: 144rem;
+    }
+  }
+
+  // .about-hero__title
+
+  &__title {
+    text-align: center;
+    color: $white;
+
+    @media (min-width: 48em) {
+      max-width: 82.6rem;
+    }
+  }
+
+  // .about-hero__bg
+
+  &__bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    &::after {
+      content: '';
+
+      position: absolute;
+      top: 0;
+      left: 0;
+
+      width: 100%;
+      height: 100%;
+
+      background-color: #000000;
+
+      opacity: 0.7;
+    }
+  }
+
+  // .about-hero__image
+
+  &__image {
+    height: 100%;
+
+    object-fit: cover;
+  }
+}
+
+.numbers {
+  padding: 4rem 0;
+
+  @media (max-width: 48em) {
+    padding: 20rem 0;
+  }
+
+  // .numbers__container
+
+  &__container {
+  }
+
+  // .numbers__slider
+
+  &__slider {
+    &.swiper {
+      width: 100%;
+
+      overflow: visible;
+    }
+  }
+
+  // .numbers__wrapper
+
+  &__wrapper {
+    @media (min-width: 48em) {
+      &.swiper-wrapper {
+        display: flex;
+        justify-content: space-between;
+      }
+    }
+  }
+
+  // .numbers__slide
+
+  &__slide {
+    &.swiper-slide {
+      width: auto;
+    }
+  }
+
+  // .numbers__numbers-item
+
+  &__numbers-item {
+  }
+}
+
 @keyframes rect1 {
   0% {
     top: 0;
