--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -99,3 +99,5 @@ main {
 @import 'sections/resources';
 @import 'sections/advantages';
 @import 'sections/contacts';
+@import 'sections/error-page';
+@import 'sections/policy';
