--- a/src/scss/base/modals.scss
+++ b/src/scss/base/modals.scss
@@ -242,3 +242,170 @@ body::after {
     }
   }
 }
+
+.request-modal {
+  overflow: auto;
+
+  // .request-modal__container
+
+  &__container {
+    @media (max-width: 48em) {
+      &:not(.request-modal_sent &) {
+        background-color: #e7e7e7;
+      }
+    }
+  }
+
+  // .request-modal__body
+
+  &__body {
+    position: relative;
+
+    padding: 4.8rem 0;
+
+    display: grid;
+    gap: 4rem;
+
+    background-color: #e7e7e7;
+
+    @media (max-width: 48em) {
+      .request-modal_sent & {
+        &::after {
+          content: '';
+
+          position: absolute;
+          z-index: -1;
+          top: 0;
+          left: -3.2rem;
+
+          width: 100vw;
+          height: 100%;
+
+          background-color: #e7e7e7;
+        }
+      }
+    }
+
+    @media (min-width: 48em) {
+      padding: 2.4rem 4rem;
+
+      grid-template-columns: 57.8rem 62.8rem;
+    }
+
+    .modal__close-btn {
+      top: 1.6rem;
+      right: 1.6rem;
+
+      @media (max-width: 48em) {
+        top: 3.2rem;
+        right: 0;
+      }
+
+      svg {
+        color: $txtColor;
+      }
+    }
+  }
+
+  // .request-modal__logo-wrap
+
+  &__logo-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 57.6rem;
+
+    .request-modal_sent & {
+      background-color: $red;
+    }
+
+    @media (max-width: 48em) {
+      height: 68.8rem;
+      order: 1;
+    }
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  // .request-modal__logo
+
+  &__logo {
+    width: 36.2rem;
+    height: 36.2rem;
+
+    @media (max-width: 48em) {
+      width: 39rem;
+      height: 39rem;
+    }
+  }
+
+  // .request-modal__form
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+
+    .field__input {
+      border: 2px solid rgba(0, 0, 0, 0.2);
+    }
+    .field__input,
+    .field__input::placeholder {
+      color: rgba(0, 0, 0, 0.2);
+    }
+  }
+
+  // .request-modal__title
+
+  &__title {
+    margin-bottom: 2.4rem;
+
+    @media (max-width: 48em) {
+      margin-bottom: 3.2rem;
+    }
+  }
+
+  // .request-modal__text
+
+  &__text {
+    margin-bottom: 6.4rem;
+
+    @media (min-width: 48em) {
+      margin-bottom: 5rem;
+
+      max-width: 57.2rem;
+    }
+  }
+
+  // .request-modal__fields
+
+  &__fields {
+    margin-bottom: 6.4rem;
+
+    display: grid;
+    gap: 4.8rem;
+
+    @media (min-width: 48em) {
+      margin-bottom: 3.2rem;
+
+      grid-template-columns: repeat(2, 1fr);
+      gap: 4rem;
+
+      .field_textarea {
+        grid-column: span 2;
+      }
+    }
+  }
+
+  &__description {
+    margin-bottom: 3.2rem;
+  }
+
+  // .request-modal__field
+
+  &__field {
+  }
+}
