--- a/src/scss/common/select.scss
+++ b/src/scss/common/select.scss
@@ -78,7 +78,12 @@
   &__content {
     margin-right: auto;
 
+    max-width: 38rem;
+
     color: $white;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 
     // hide / show selected value
     ._has-label & {
