--- a/src/scss/sections/request.scss
+++ b/src/scss/sections/request.scss
@@ -6,6 +6,7 @@
 
   @media (max-width: 48em) {
     padding: 20rem 3.2rem;
+    padding-bottom: 0;
   }
 
   // .request__container
@@ -121,6 +122,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+
+    background-color: $gray;
 
     @media (min-width: 48em) {
       row-gap: 2.5rem;
