--- a/src/scss/sections/special.scss
+++ b/src/scss/sections/special.scss
@@ -16,9 +16,10 @@
       width: 32rem;
       height: 32rem;
 
-      border: 2px solid #cfcfcf;
+      border: 1px solid #cfcfcf;
 
       transform: translateY(-50%) rotate(45deg);
+      animation: specialrect3 10s ease 5s infinite;
     }
   }
 
@@ -45,6 +46,10 @@
       border: 2px solid #cfcfcf;
 
       transform: translateY(-50%) rotate(45deg);
+
+      @media (max-width: 48em) {
+        border: 1px solid #dedede;
+      }
     }
 
     &::before {
@@ -52,6 +57,12 @@
 
       width: 64rem;
       height: 64rem;
+
+      animation: specialrect1 10s ease 5s infinite;
+
+      @media (min-width: 48em) {
+        animation: specialrect 10s ease 5s infinite;
+      }
 
       @media (max-width: 48em) {
         left: -25rem;
@@ -67,6 +78,12 @@
 
       width: 47rem;
       height: 47rem;
+
+      animation: specialrect2 10s ease 5s infinite;
+
+      @media (min-width: 48em) {
+        animation: specialrect2d 10s ease 5s infinite;
+      }
 
       @media (max-width: 48em) {
         left: -17rem;
@@ -183,5 +200,78 @@
   // .special__btn
 
   &__btn {
+  }
+}
+
+@keyframes specialrect {
+  0% {
+    left: -77rem;
+    top: 50%;
+  }
+  30% {
+    left: -90rem;
+    top: 45%;
+  }
+  100% {
+    left: -77rem;
+    top: 50%;
+  }
+}
+
+@keyframes specialrect2d {
+  0% {
+    left: -68rem;
+    top: 50%;
+  }
+  30% {
+    left: -59rem;
+    top: 53%;
+  }
+  100% {
+    left: -68rem;
+    top: 50%;
+  }
+}
+@keyframes specialrect1 {
+  0% {
+    left: -25rem;
+    top: 43%;
+  }
+  30% {
+    left: -32rem;
+    top: 43%;
+  }
+  100% {
+    left: -25rem;
+    top: 43%;
+  }
+}
+@keyframes specialrect2 {
+  0% {
+    left: -17rem;
+    top: 43%;
+  }
+  30% {
+    left: -7rem;
+    top: 44%;
+  }
+  100% {
+    left: -17rem;
+    top: 43%;
+  }
+}
+
+@keyframes specialrect3 {
+  0% {
+    top: 44.5%;
+    left: -8rem;
+  }
+  30% {
+    top: 52.5%;
+    left: -25rem;
+  }
+  100% {
+    top: 44.5%;
+    left: -8rem;
   }
 }
