--- a/src/scss/base/header.scss
+++ b/src/scss/base/header.scss
@@ -78,6 +78,10 @@
   &__nav {
     display: flex;
     column-gap: 3.2rem;
+
+    &:not(._page-loaded &) {
+      opacity: 0;
+    }
   }
 
   // .header__link
