--- a/src/scss/sections/clients.scss
+++ b/src/scss/sections/clients.scss
@@ -62,7 +62,7 @@
 
 .slide-clients {
   &.swiper-slide {
-    width: auto;
+    width: 22rem;
 
     @media (max-width: 48em) {
       width: 25rem;
