--- a/src/scss/common/form.scss
+++ b/src/scss/common/form.scss
@@ -18,12 +18,20 @@ input:focus {
 }
 
 .field {
+  &._is-filled {
+    .field__input {
+      color: $white;
+      border: 2px solid $white;
+    }
+  }
+
   &__input,
   &__input::placeholder {
     font-family: 'Roboto';
     font-weight: 500;
     line-height: 2.1rem;
     color: rgba(255, 255, 255, 0.4);
+    transition: color 0.3s ease;
 
     @media (max-width: 48em) {
       line-height: 140%;
@@ -50,6 +58,12 @@ input:focus {
     width: 100%;
     height: 5.3rem;
     border: 2px solid rgba(255, 255, 255, 0.4);
+    transition: border 0.3s ease;
+
+    &:focus {
+      color: $white;
+      border: 2px solid $white;
+    }
 
     @media (max-width: 48em) {
       padding: 3.2rem 4rem;
