--- a/src/scss/common/select.scss
+++ b/src/scss/common/select.scss
@@ -43,33 +43,72 @@
     width: 100%;
     border: 2px solid $white;
 
+    &:not(._is-filled &) {
+      &::before {
+        content: attr(data-placeholder);
+
+        position: absolute;
+        left: 2.4rem;
+        top: 50%;
+
+        opacity: 0.4;
+        transform: translateY(-50%);
+
+        @media (max-width: 48em) {
+          left: 4rem;
+        }
+      }
+    }
+
     > * {
       flex: 1 1 auto;
     }
 
     @media (max-width: 48em) {
       padding: 2.8rem 4rem;
-
-      &::after {
-        flex: 0 0 4.8rem;
-        width: 4.8rem;
-        height: 4.8rem;
-      }
     }
 
     &::after {
-      content: '';
-
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      flex: 0 0 2.4rem;
-      width: 2.4rem;
-      height: 2.4rem;
-
+      margin-left: auto;
       background: url(@img/icons/sl-arr.svg) center / contain no-repeat;
 
       transition: transform 0.3s ease;
+
+      ._is-filled & {
+        display: none;
+      }
+    }
+  }
+
+  &__remove-btn {
+    display: inline-flex;
+    flex: 0 0 2.4rem;
+
+    @media (max-width: 48em) {
+      flex: 0 0 4.8rem;
+    }
+    &:not(._is-filled &) {
+      display: none;
+    }
+    &::after {
+      background: url(@img/icons/cross.svg) center / contain no-repeat;
+    }
+  }
+
+  &__remove-btn::after,
+  &__value::after {
+    content: '';
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    flex: 0 0 2.4rem;
+    width: 2.4rem;
+    height: 2.4rem;
+
+    @media (max-width: 48em) {
+      flex: 0 0 4.8rem;
+      width: 4.8rem;
+      height: 4.8rem;
     }
   }
 
@@ -84,6 +123,10 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
+
+    &:not(._is-filled &) {
+      opacity: 0.4;
+    }
 
     // hide / show selected value
     ._has-label & {
@@ -288,8 +331,10 @@
   // select state
   &._is-opened {
     z-index: 5;
-    .select__value::after {
-      transform: rotate(-180deg);
+    &:not(._is-filled) {
+      .select__value::after {
+        transform: rotate(-180deg);
+      }
     }
   }
   &._has-error {
