--- a/src/scss/sections/request.scss
+++ b/src/scss/sections/request.scss
@@ -151,23 +151,15 @@
   &__field {
   }
 
-  // .request__checkbox
-
-  &__checkbox {
-    @media (max-width: 48em) {
-      display: none;
-    }
-  }
-
   // .request__text
 
   &__text {
-    margin-bottom: 3.2rem;
-
     color: $white;
 
-    @media (min-width: 48em) {
-      display: none;
+    @media (max-width: 48em) {
+      margin-bottom: 3.2rem;
+
+      font-size: 2.8rem;
     }
   }
 
