--- a/src/scss/sections/reviews.scss
+++ b/src/scss/sections/reviews.scss
@@ -385,6 +385,13 @@
   width: 5.6rem;
   height: 5.6rem;
   border: 1px solid rgba(14, 14, 14, 0.2);
+  transition: border 0.3s ease;
+
+  @media (any-hover: hover) {
+    &:hover {
+      border: 1px solid $red;
+    }
+  }
 
   @media (max-width: 48em) {
     width: 9.6rem;
