--- a/src/scss/sections/portfolio.scss
+++ b/src/scss/sections/portfolio.scss
@@ -246,6 +246,10 @@
 
   @media (max-width: 48em) {
     padding: 3.2rem;
+
+    .portfolio-in & {
+      padding: 0;
+    }
   }
 
   @media (any-hover: hover) {
@@ -273,6 +277,12 @@
       margin-bottom: 3.2rem;
 
       height: 62rem;
+
+      .portfolio-in & {
+        margin-bottom: 1.5rem;
+
+        height: 35rem;
+      }
     }
   }
 
@@ -285,6 +295,15 @@
   }
 
   // .card-portfolio__heading
+
+  &__heading,
+  &__date {
+    @media (max-width: 48em) {
+      .portfolio-in & {
+        padding: 0 1.5rem;
+      }
+    }
+  }
 
   &__heading {
     margin-bottom: 1.4rem;
@@ -299,6 +318,13 @@
 
       font-size: 4.8rem;
       line-height: 6rem;
+
+      .portfolio-in & {
+        margin-bottom: 1rem;
+
+        font-size: 3.6rem;
+        line-height: 140%;
+      }
     }
   }
 
@@ -306,6 +332,12 @@
 
   &__date {
     opacity: 0.4;
+
+    @media (max-width: 48em) {
+      .portfolio-in & {
+        padding-bottom: 3rem;
+      }
+    }
   }
 }
 
@@ -420,11 +452,11 @@
 
   &__items {
     display: grid;
-    gap: 4.8rem;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 4rem;
 
-    @media (min-width: 48em) {
-      grid-template-columns: repeat(2, 1fr);
-      gap: 4rem;
+    @media (max-width: 48em) {
+      gap: 3rem;
     }
   }
 }
