--- a/src/scss/sections/catalog.scss
+++ b/src/scss/sections/catalog.scss
@@ -326,6 +326,8 @@
 }
 
 .quantity {
+  height: 10.1rem;
+
   @media (min-width: 48.01em) {
     height: 5.2rem;
   }
@@ -337,9 +339,14 @@
 
     display: flex;
     justify-content: space-between;
+    align-items: center;
     column-gap: 1.5rem;
     height: 100%;
     border: 2px solid $white;
+
+    @media (max-width: 48em) {
+      padding: 1.5rem 2.5rem;
+    }
   }
 
   // .quantity__btn
@@ -351,6 +358,11 @@
 
     svg {
       width: 100%;
+
+      @media (max-width: 48em) {
+        flex: 0 0 3rem;
+        width: 3rem;
+      }
     }
 
     // .quantity__btn_incriment
